# rl_llm_slates

./: .env  .gitignore  README.md  pyproject.toml
src/plotting_scripts/: inference_plots.ipynb  result_plot.ipynb  significance_test.ipynb
src/rl_mind_dataset/: common.py  utils.py
src/rl_mind_dataset/agent_modeling/: agent.py  dqn_agent.py  slate_generator.py  wp_agent.py  wp_slate_agent.py
src/rl_mind_dataset/document_modelling/: data_reader.py
src/rl_mind_dataset/environment/: environment.py
src/rl_mind_dataset/mind_dataset/: article_data.ipynb  dataset_preprocessing.ipynb  mind_data.ipynb
src/rl_mind_dataset/simulation_environment/: environment.py
src/rl_mind_dataset/user_modelling/: choice_model.py  ncf.py  response_model.py  user_state.py
src/scripts/: config.yaml  simulation_imports.py
src/scripts/serving_tests/: greedy_test.py  knn_slateq_test.py  llm_slates.py  random_policy.py  random_slateq_test.py  slateq_gen_collect_slates.py  slateq_test.py  wp_slate_gen_collect_slates.py  wp_slate_test.py  wp_slate_test_evaluate.py
src/scripts/serving_time/: slateq_serving_time.py  wp_slate_serving_time.py
src/scripts/simulation/: greedy.py  q_learning.py  slateq_divstate_simulation.py  slateq_llm_simulation.py  slateq_simulation.py  wp_item_simulation.py  wp_slate_llm_simulation.py  wp_slate_simulation.py
src/tests/document_modelling/: test_data_reader.py
src/tests/user_modelling/: test_user_state.py
tests/: conftest.py
